@@ -1,3 +1,14 @@
+2011-01-18  Adam Klein  <adamk@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [Chromium] Replace ChromiumBridge::widgetSetCursor with ChromeClient::setCursor
+        https://bugs.webkit.org/show_bug.cgi?id=42236
+
+        * platform/chromium/ChromiumBridge.h:
+        * platform/chromium/WidgetChromium.cpp:
+        (WebCore::Widget::setCursor):
+
 2011-01-18  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Darin Adler.
